# prompttools

./: .commit_msg.txt  .commit_msg10.txt  .commit_msg11.txt  .commit_msg6.txt  .commit_msg7.txt  .commit_msg8.txt  .commit_msg9.txt  .gitattributes  .gitignore  CLAUDE.md  LICENSE  MEMORY.md  README-full.md  README-full.txt  README.md  _write_eval.py  pyproject.toml
.claude/evaluations/: eval-001-loop2.yaml  eval-001.yaml  eval-002.yaml  eval-003.yaml  eval-004.yaml  eval-005.yaml  eval-006.yaml
.claude/handoffs/: handoff-2026-03-25.yaml
.claude/skills/harness/: SKILL.md
.claude/skills/harness-build/: SKILL.md
.claude/skills/harness-eval/: SKILL.md
.claude/skills/harness-eval-design/: SKILL.md
.claude/skills/harness-plan/: SKILL.md
.claude/sprints/: sprint-001.yaml  sprint-002.yaml  sprint-003.yaml  sprint-004.yaml  sprint-005.yaml  sprint-006.yaml
.github/: COST_HYGIENE.md
.github/workflows/: ci.yml  cost-hygiene.yml
docs/: index.html  terms.html
e2e_test/: new.yaml  old.yaml  promptvault.yaml  sample.yaml  test_fail.yaml  test_sample.yaml
tests/: test_integration.py
